--- a/package.json
+++ b/package.json
@@ -1,75 +1,26 @@
 {
-  "name": "parrot_handon",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "parrot-social",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "dev": "tsc && node --unhandled-rejections=strict -r dotenv/config ./dist/infrastructure/app/app.js",
-    "debug": "set DEBUG=* && npm run dev",
-    "mocks": "tsc && node ./dist/infrastructure/persistence/mocks/mocks.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JaquelineVictal/Parrot_HandOn.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JaquelineVictal/Parrot_HandOn/issues"
-  },
-  "homepage": "https://github.com/JaquelineVictal/Parrot_HandOn#readme",
-  "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "@faker-js/faker": "^7.6.0",
-    "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.12",
-    "@types/debug": "^4.1.7",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.14",
-    "@types/jest": "^29.1.2",
-    "@types/multer": "^1.4.7",
-    "@types/mysql": "^2.15.21",
-    "@types/node": "^18.11.3",
-    "@types/node-fetch": "^2.6.2",
-    "babel-jest": "^29.2.1",
-    "jest": "^29.2.1",
-    "lite-server": "^2.6.1",
-    "sequelize-cli": "^6.5.1",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.0",
-    "ts-jest": "^29.0.3",
-    "tslint": "^6.1.3",
-    "typescript": "^4.8.4"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/sequelize": "^4.28.14",
-    "@types/supertest": "^2.0.12",
-    "all": "^0.0.0",
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "cypress": "^9.2.0",
-    "debug": "^4.3.4",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-validation": "^4.1.0",
-    "express-winston": "^4.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3",
-    "node-fetch": "^2.6.6",
-    "nodeenv": "^3.0.75",
-    "sequelize": "^6.25.1",
-    "winston": "^3.8.2",
-    "xlsx": "^0.18.5"
+    "axios": "^1.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^2.1.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0"
   }
 }
